--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -5,6 +5,10 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  grid-template-rows: 80px, 1fr, 50px, 5fr 1fr;
+  gap: 4px;
 }
 
 .container div {
@@ -17,15 +21,34 @@
 
 .header {
   background-color: #393f4d;
+  grid-row: 1;
+  grid-column: 1 / 3;
+
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  align-items: center;
+}
+
+.menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  align-items: center;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style-type: none;
 }
 
 .sidebar {
   background-color: #C50208;
+  grid-row: 2 / span 3;
+  grid-column: 1;
+
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -42,19 +65,44 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  text-align: center;
+}
+
+.photo, .side-content {
+  display: grid;
+  justify-items: center;
+  align-items: center;
 }
 
 .nav {
   background-color: #C50208;
+  grid-row: 2;
+  grid-column: 2;
+  display: grid;
+  align-items: center;
+}
+
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  list-style-type: none;
 }
 
 .article {
   background-color: #bccbde;
+  grid-row: 3 / 5;
+  grid-column: 2;
+
+  display: grid;
+  gap: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  /* grid-template-rows: repeat(auto-fit, 200px) */
 }
 
 .article p {
@@ -68,6 +116,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -83,6 +132,8 @@
 
 .footer {
   background-color: #393f4d;
+  grid-row: 5;
+  grid-column: 1 / 3;
 }
 
 .footer p {
